[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
serde = "1.0.152"
async-graphql = { version = "5.0.5", features = ["chrono"] }
axum = "0.6.3"
sqlx = { version = "0.6.2", default_features = false, features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["cors"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.14", features = ["rustls-tls-webpki-roots"] }
chrono = "0.4.23"

[dependencies.openssl]
version = "0.10.29"
features = [
    "vendored"
]