[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
serde = "1.0.163"
async-graphql = { version = "5.0.8", features = ["chrono"] }
axum = "0.6.18"
sqlx = { version = "0.6.3", default_features = false, features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["rustls-tls-webpki-roots", "rustls"] }
chrono = "0.4.24"

[dependencies.openssl]
version = "0.10.52"
features = [
    "vendored"
]