[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tokio-tungstenite = { version = "0.20.0", features = [
  "rustls-tls-webpki-roots",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.1", default_features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
] }
url = "2.4.1"
futures-util = "0.3.28"
futures = "0.3.28"
async_once = "0.2.6"
serde-aux = "4.2.0"
axum = "0.6.20"
